--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev:db:rm": "docker-compose rm  -s -f -v dev-db",
-    "dev:db:up": "docker-compose  --env-file ./config/.env.dev up dev-db",
-    "dev:db" : "yarn dev:db:rm && yarn dev:db:up",
+    "dev:db:up": "docker-compose  --env-file ./config/.env.dev up -d dev-db",
+    "dev:db": "yarn dev:db:rm && yarn dev:db:up",
     "test:db:rm": "docker-compose rm  -s -f -v test-db",
-    "test:db:up": "docker-compose  --env-file ./config/.env.test up test-db",
-    "test:db" : "yarn test:db:rm && yarn test:db:up",
+    "test:db:up": "docker-compose  --env-file ./config/.env.test up -d test-db ",
+    "test:db": "yarn test:db:rm && yarn test:db:up",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "prestart:dev": "yarn dev:db",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -23,6 +24,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "pretest:e2e": "yarn test:db",
     "test:e2e": "jest --watch --no-cache --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -62,7 +64,6 @@
     "pactum": "^3.4.1",
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
