--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "pretest:e2e": "yarn test:db",
-    "test:e2e": "jest --watch --no-cache --config ./test/jest-e2e.json"
+    "test:e2e": "jest --no-cache --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
